--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqlite3_flutter_libs: ^0.5.0
   drift: ^1.1.0
+  path_provider: ^2.0.8
+  provider: ^6.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
